add ToggleSprintHud
- The first StringOption!
- removed usage of deprecated APIs in ConfigHandler.